# agreement_docs

./: .gitignore  README.md  agreement.css  agreement.html.jinja  agreement_template.html.jinja  agreement_template.md.jinja  app.py  docxmerge.py  htmlmerge.py  main.py  mergedata.py  mkdocs.yml  pyproject.toml  style.css  utils.py
docs/source/: api.rst  conf.py  index.rst  installation.rst  usage.rst
html/.doctrees/source/: index.doctree
