[project]
name = "pdfdocx"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "docx-mailmerge2>=0.9.0",
    "fastexcel>=0.13.0",
    "jinja2>=3.1.6",
    "mistune>=3.1.3",
    "pendulum>=3.0.0",
    "pikepdf>=9.5.2",
    "polars>=1.23.0",
    "typer>=0.15.1",
    "weasyprint>=65.0",
]

[dependency-groups]
dev = [
    "ruff>=0.11.2",
]
web = [
    "streamlit>=1.43.1",
]
